[package]
name = "h3lis200dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accelerometer = "0.12.0"
anyhow = "1.0.82"
bimap = "0.6.3"
cast = "0.3.0"
embedded-hal = "1.0.0"
lazy_static = "1.4.0"
mint = "0.5.9"

[dev-dependencies]
linux-embedded-hal = "0.4.0"
